fix(test-util): use jdk 11 compatible code
This was using formatted which isn't available in jdk 11 yet. But that's
easily fixed by using String.format.